--- a/public/index.html
+++ b/public/index.html
@@ -7,10 +7,7 @@
 
   <body>
     <div>
-      <div>
-        <h1>Darkest Companion</h1>
-        <p>Coming soon...</p>
-      </div>
+      <div id="app-root"></div>
     </div>
 
     <script src="./bundle.js" type="text/javascript"></script>
