Add some minimal styling

--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,12 @@
   <head>
     <meta charset="UTF-8">
     <title>Darkest Companion</title>
+    <link rel="stylesheet" href="./style.css">
   </head>
 
   <body>
     <div>
+      <img id="logo" src="./logo.png" alt="darkest-dungeon-logo"/>
       <div id="app-root"></div>
     </div>
 
