Add Curios view, lot of styling

--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8">
     <title>Darkest Companion</title>
     <link rel="stylesheet" href="./style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
 
   <body>
     <div>
-      <img id="logo" src="./logo.png" alt="darkest-dungeon-logo"/>
+      <div class='centered'>
+        <img id="logo" src="./logo.png" alt="darkest-dungeon-logo"/>
+      </div>
       <div id="app-root"></div>
     </div>
 
